Full day working many small changes, mostly log + added some TODO items - Sean

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .idea/prometheus.iml
 /Data
 config.txt
+logfile.txt
 
 # ---- Below is a standard python .gitignore I found on github ----
 # https://github.com/github/gitignore/blob/master/Python.gitignore
